fixat checkboxes med "visibilty"

--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ main {
     align-items: center;
     min-width: 100%;
     min-height: 250px;
-    
+    align-items: center;
 
     
 }
